--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "skills-marketplace-client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "https://skillshub-backend.onrender.com/,
   "dependencies": {
     "axios": "^1.5.0",
     "framer-motion": "^10.16.4",
