--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-﻿CI=false
-REACT_APP_API_URL=https://skillshub-backend.onrender.com/api
+﻿REACT_APP_API_URL=https://skillshub-backend.onrender.com/api
+CI=false
